[gd_scene load_steps=9 format=3 uid="uid://dxhedkw2g6efa"]

[ext_resource type="Texture2D" uid="uid://otb6v6ijcxk1" path="res://Sprites/win_theme_atlas.png" id="1_s0fkh"]
[ext_resource type="Script" path="res://Scripts/Menu/menu_window.gd" id="2_6ss7k"]
[ext_resource type="Script" path="res://Scripts/Menu/menu_setting.gd" id="3_lchq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_leph3"]
atlas = ExtResource("1_s0fkh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crnel"]
size = Vector2(404, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rtvw"]
atlas = ExtResource("1_s0fkh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02pjx"]
atlas = ExtResource("1_s0fkh")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd8xr"]
atlas = ExtResource("1_s0fkh")
region = Rect2(32, 16, 16, 16)

[node name="Settings_Window" type="NinePatchRect"]
texture_filter = 1
offset_right = 400.0
offset_bottom = 220.0
texture = SubResource("AtlasTexture_leph3")
patch_margin_left = 1
patch_margin_top = 21
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource("2_6ss7k")

[node name="Tab_Collider" type="Area2D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tab_Collider"]
visible = false
position = Vector2(200, 10.5)
shape = SubResource("RectangleShape2D_crnel")

[node name="Close_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 3.0
offset_right = 397.0
offset_bottom = 19.0
texture_normal = SubResource("AtlasTexture_6rtvw")
texture_pressed = SubResource("AtlasTexture_02pjx")
texture_hover = SubResource("AtlasTexture_nd8xr")

[node name="Settings_Tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -190.0
offset_top = 26.0
offset_right = 190.0
offset_bottom = 176.0
grow_horizontal = 2
tab_focus_mode = 0
script = ExtResource("3_lchq0")

[node name="Display" type="TabBar" parent="Settings_Tabs"]
layout_mode = 2

[node name="Label_Resolution" type="Label" parent="Settings_Tabs/Display"]
layout_mode = 2
offset_left = 19.0
offset_top = 5.0
offset_right = 319.0
offset_bottom = 28.0
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Settings_Tabs/Display/Label_Resolution"]
layout_mode = 2
offset_left = 185.0
offset_right = 340.0
offset_bottom = 31.0
focus_mode = 0
item_count = 6
selected = 0
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2
popup/item_3/text = "3840x2160"
popup/item_3/id = 3
popup/item_4/text = "2560x1080"
popup/item_4/id = 4
popup/item_5/text = "3440x1440"
popup/item_5/id = 5

[node name="Label_WinMode" type="Label" parent="Settings_Tabs/Display"]
layout_mode = 2
offset_left = 19.0
offset_top = 38.0
offset_right = 319.0
offset_bottom = 61.0
text = "Window Mode"

[node name="OptionButton" type="OptionButton" parent="Settings_Tabs/Display/Label_WinMode"]
layout_mode = 2
offset_left = 185.0
offset_right = 340.0
offset_bottom = 31.0
focus_mode = 0
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Graphics" type="TabBar" parent="Settings_Tabs"]
visible = false
layout_mode = 2

[node name="Label_ResScale" type="Label" parent="Settings_Tabs/Graphics"]
layout_mode = 2
offset_left = 19.0
offset_top = 5.0
offset_right = 319.0
offset_bottom = 28.0
text = "Resolution Scale"

[node name="HSlider" type="HSlider" parent="Settings_Tabs/Graphics/Label_ResScale"]
layout_mode = 0
offset_left = 185.0
offset_right = 340.0
offset_bottom = 31.0
focus_mode = 0
max_value = 6.0
scrollable = false

[node name="Sounds" type="TabBar" parent="Settings_Tabs"]
visible = false
layout_mode = 2

[node name="Apply_Button" type="Button" parent="."]
layout_mode = 2
offset_left = 320.0
offset_top = 180.0
offset_right = 389.0
offset_bottom = 211.0
size_flags_horizontal = 8
focus_mode = 0
text = "  Apply  "

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="input_event" from="Tab_Collider" to="." method="_area2d_input"]
[connection signal="pressed" from="Close_Button" to="." method="_close_pressed"]
[connection signal="win_fix" from="Settings_Tabs" to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Apply_Button" to="Settings_Tabs" method="_apply_button"]
